[gd_scene load_steps=7 format=3 uid="uid://nn3vgn0bneao"]

[ext_resource type="Script" path="res://scenes/entities/item_drop.gd" id="1_n0g53"]
[ext_resource type="Texture2D" uid="uid://bvbtyk4x0nd2o" path="res://art/bookClosed.png" id="2_jdvp1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md3eu"]
size = Vector2(7, 12)

[sub_resource type="Animation" id="Animation_04vs7"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.66, 0.66), Vector2(1.335, 1.335), Vector2(0.66, 0.66), Vector2(1.335, 1.335)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="Animation" id="Animation_6aivt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.435, 0.435)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gik17"]
_data = {
"RESET": SubResource("Animation_6aivt"),
"hover": SubResource("Animation_04vs7")
}

[node name="Book1" type="Node2D"]
script = ExtResource("1_n0g53")
itemValue = 1

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.435, 0.435)
texture = ExtResource("2_jdvp1")

[node name="PickupBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 33

[node name="PickupShape" type="CollisionShape2D" parent="PickupBox"]
texture_filter = 1
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_md3eu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gik17")
}

[connection signal="area_entered" from="PickupBox" to="." method="_on_pickupbox_area_entered"]
