[gd_scene load_steps=2 format=3 uid="uid://dypsrph1dpaju"]

[ext_resource type="Script" path="res://scenes/entities/item_drop.gd" id="1_hb03c"]

[node name="ItemDrop" type="Node2D"]
script = ExtResource("1_hb03c")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="PickupBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 33

[node name="PickupShape" type="CollisionShape2D" parent="PickupBox"]
